--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping_cart",
   "version": "0.1.0",
-  "homepage": "https://bojan227.github.io/shopping_cart/",
+  "homepage": "https://Bojan227.github.io/shopping_cart/",
   "private": true,
   "dependencies": {
     "@react-spring/animated": "^9.4.5",
