--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,8 @@
 {
-  "singleQuote": true
+    "trailingComma": "es5",
+
+    "tabWidth": 4,
+    "bracketSpacing": false,
+
+    "singleQuote": true
 }
